# Discord-Bot

./: .gitignore  AdvancedHistory.py  Assets.py  Clock.py  Discord_Bot.py  LoLAPI.py  LoLMatch.py  MANIFEST.in  MyError.py  README.md  Stats.py  Team_picker.py  Tests.py  YTDL.py  pyproject.toml  run_api.py  setup.cfg
.github/workflows/: python-publish.yml
LoL/: AdvancedHistory.py  ChampInfos.py  LoLAPI.py  LoLChamp.py
cogs/: API.py  ChatBot.py  Checks.py  Display.py  GUI.py  LoL.py  MyHelp.py  Talking.py  Voice.py
src/: Assets.py  Discord_Bot.py  Stats.py
src/Discord_Bot_Laggrif/: Assets.py  Clock.py  ColorAverage.py  Discord_Bot.py  MyError.py  Stats.py  YTDL.py
src/Discord_Bot_Laggrif/LoL/: AdvancedHistory.py  ChampInfos.py  LoLAPI.py  LoLChamp.py  LoLMatch.py  Team_picker.py
src/Discord_Bot_Laggrif/cogs/: ChatBot.py  Checks.py  Display.py  GUI.py  LoL.py  Talking.py  Voice.py
src/LoL/: AdvancedHistory.py  ChampInfos.py  ChampInfos2.py  LoLAPI.py  LoLChamp.py  LoLMatch.py
src/cogs/: Display.py  LoL_cog.py  MyHelp.py  Talking.py  Voice.py
