[metadata]name = Discord_Bot_Laggrif
version = 0.0.1
author = Ugo Novello
author_email = ugo.novello@gmail.com
description = A perfect discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://Laggrif.github.io
project_urls =
Bug Tracker = https://github.com/Laggrif/Discord-Bot/issues
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent[options]
package_dir =
src =
packages = find:
python_requires = >=3.6
install_requires =
   numpy, py-cord, youtube_dl, psutil, PyNaCl, adafruit-circuitpython-ssd1306, pillow, requests